--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "postinstall": "npm run build && cp -a dist/. public/ && cp -a dist/. ./"
+    "postinstall": "npm run build"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
+    "express": "^4.16.3",
     "firebase": "^4.1.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
